# Pet-Projects

./: .gitignore  README.md
Local-AIOps-Copilot/: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  pyproject.toml
Local-AIOps-Copilot/Architecture/: C1_SystemContext.puml  C2_Container.puml  C3_Deployment.puml  C4_ChatFlow.puml  C5_MLOpsPipeline.puml  C6_KubernetesDeployment.puml  README.md
Local-AIOps-Copilot/infra/docker/: alert_rules.yml  alertmanager.yml  logstash.conf  prometheus.yml
Local-AIOps-Copilot/infra/helm/: Chart.yaml  values.yaml
Local-AIOps-Copilot/infra/scripts/: dev-up.ps1  dev-up.sh  gpu-up.ps1  gpu-up.sh  run-tests.sh
Local-AIOps-Copilot/infra/terraform/: main.tf
Local-AIOps-Copilot/services/agent-service/: Dockerfile  requirements.txt
Local-AIOps-Copilot/services/agent-service/app/: graph.py  memory.py  server.py
Local-AIOps-Copilot/services/airflow/dags/: drift_dag.py  evaluation_dag.py  ingestion_dag.py  release_decision_dag.py  replay_dag.py
Local-AIOps-Copilot/services/api-gateway/: Dockerfile  requirements.txt
Local-AIOps-Copilot/services/api-gateway/app/: agent_client.py  main.py  models.py  ws_manager.py
Local-AIOps-Copilot/services/eval-service/: Dockerfile  requirements.txt
Local-AIOps-Copilot/services/eval-service/app/: main.py
Local-AIOps-Copilot/services/frontend/: Dockerfile  requirements.txt
Local-AIOps-Copilot/services/frontend/app/: main.py
Local-AIOps-Copilot/services/mcp-tool-server/: Dockerfile  requirements.txt
Local-AIOps-Copilot/services/mcp-tool-server/app/: main.py
Local-AIOps-Copilot/services/rag-service/: Dockerfile  requirements.txt
Local-AIOps-Copilot/services/rag-service/app/: main.py  vectorstore.py
Local-AIOps-Copilot/services/release-controller/: Dockerfile  requirements.txt
Local-AIOps-Copilot/services/release-controller/app/: decision_engine.py  main.py  models.py
Local-AIOps-Copilot/shared/config/: settings.py
Local-AIOps-Copilot/shared/grpc_common/protos/: agent.proto  rag.proto
Local-AIOps-Copilot/shared/llm_backend/: __init__.py  base.py  comparison.py  factory.py  mock_client.py  ollama_client.py  triton_client.py  vllm_client.py
Local-AIOps-Copilot/shared/logging/: __init__.py  logger.py
Local-AIOps-Copilot/shared/metrics/: __init__.py  prometheus.py
Local-AIOps-Copilot/tests/: conftest.py  requirements.txt
Local-AIOps-Copilot/tests/smoke/: test_smoke.py
Local-AIOps-Copilot/tests/unit/: test_config.py  test_decision_engine.py  test_llm_backend.py  test_memory.py  test_vectorstore.py
Proxima-QR-Code-System/proxima-qr/backend/: CMakeLists.txt
Proxima-QR-Code-System/proxima-qr/backend/src/: auth.hpp  main.cpp  templates.cpp  templates.hpp
VoiceAgentPlatform/: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  HARDWARE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
VoiceAgentPlatform/Architecture/: C1-System-Context  C2-Container-Diagram
VoiceAgentPlatform/apps/gateway/gateway_app/: livekit_utils.py  main.py
VoiceAgentPlatform/apps/livekit-agent/livekit_agent_app/: __init__.py  main.py
VoiceAgentPlatform/apps/llm-service/llm_service_app/: __init__.py  grpc_server.py  http_app.py  main.py  providers.py  tool_planner.py
VoiceAgentPlatform/deploy/docker/: Dockerfile.backend
VoiceAgentPlatform/knowledge/robotic-home/: guide.md
VoiceAgentPlatform/knowledge/robotic-suit/: manual.md
VoiceAgentPlatform/knowledge/starship/: operations.md
VoiceAgentPlatform/knowledge/ugv/: field-ops.md
VoiceAgentPlatform/scripts/: bootstrap_models.ps1  bootstrap_models.sh  detect_hardware.ps1  detect_hardware.sh  generate_protos.py
VoiceAgentPlatform/tests/: conftest.py
VoiceAgentPlatform/tests/integration/: test_rag_ingestion.py  test_voice_turn.py
VoiceAgentPlatform/tests/unit/: test_session_orchestration.py
vCard-Business-QR-Manager/vcard-business-qr-manager/backend/: CMakeLists.txt
(+422 files in other folders)
